[package]
name = "runx-runtime"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
description = "Native Rust runtime placeholder for runx execution, adapters, and sandboxing."
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["runx", "runtime", "agents", "sandbox", "mcp"]
categories = ["development-tools"]
include = ["Cargo.toml", "README.md", "src/**/*.rs"]

[lints]
workspace = true

[features]
default = []
cli-tool = []
mcp = []
a2a = []
agent = []
catalog = ["cli-tool"]

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
runx-contracts.workspace = true
runx-core.workspace = true
runx-parser.workspace = true
runx-receipts.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
sha2.workspace = true
thiserror.workspace = true
url = "2.5.7"

[dev-dependencies]
proptest = { version = "1.11.0", default-features = false, features = ["std"] }
tempfile = "3.23.0"

[lib]
name = "runx_runtime"
path = "src/lib.rs"
